// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<pagination> demo: render [all] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\"><span class=\\"arco-pagination-total\\">共 50 条</span>
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"5\\">1</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">2</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">3</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">4</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">5</li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
  </ul><span class=\\"arco-pagination-options\\"><span class=\\"arco-select-view-single arco-select arco-select-view arco-select-view-size-medium\\" title=\\"10 条/页\\"><!----><input class=\\"arco-select-view-input arco-select-view-input-hidden\\" readonly=\\"\\"><span class=\\"arco-select-view-value\\">10 条/页</span><span class=\\"arco-select-view-suffix\\"><!----><span class=\\"arco-select-view-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down arco-select-view-arrow-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
  <!----></span></span>
  <!----></span><span class=\\"arco-pagination-jumper\\"><span class=\\"arco-pagination-jumper-prepend arco-pagination-jumper-text-goto\\">前往</span><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium arco-pagination-jumper-input\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"5\\" aria-valuemin=\\"1\\" aria-valuenow=\\"\\" class=\\"arco-input arco-input-size-medium\\" type=\\"text\\"><!----><!----></span>
  <!--v-if-->
  <!--v-if--></span>
</div>"
`;

exports[`<pagination> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\">
  <!---->
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"5\\">1</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">2</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">3</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">4</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">5</li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>"
`;

exports[`<pagination> demo: render [custom] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\">
  <!---->
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-send\\" style=\\"transform: rotate(180deg);\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m14 24-7-5V7l34 17L7 41V29l7-5Zm0 0h25\\" stroke-miterlimit=\\"3.864\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"20\\"> - 1 - </li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\"> - 2 - </li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\"> - 3 - </li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\"> - 4 - </li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\"> - 5 - </li>
    <li class=\\"arco-pagination-item arco-pagination-item-ellipsis\\" disabled=\\"false\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-sun-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <circle cx=\\"24\\" cy=\\"24\\" r=\\"9\\" fill=\\"currentColor\\" stroke=\\"none\\"></circle>
        <path d=\\"M21 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-5ZM21 37.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-5ZM42.5 21a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-5a.5.5 0 0 1 .5-.5h5ZM10.5 21a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5v-5a.5.5 0 0 1 .5-.5h5ZM39.203 34.96a.5.5 0 0 1 0 .707l-3.536 3.536a.5.5 0 0 1-.707 0l-3.535-3.536a.5.5 0 0 1 0-.707l3.535-3.535a.5.5 0 0 1 .707 0l3.536 3.535ZM16.575 12.333a.5.5 0 0 1 0 .707l-3.535 3.535a.5.5 0 0 1-.707 0L8.797 13.04a.5.5 0 0 1 0-.707l3.536-3.536a.5.5 0 0 1 .707 0l3.535 3.536ZM13.04 39.203a.5.5 0 0 1-.707 0l-3.536-3.536a.5.5 0 0 1 0-.707l3.536-3.535a.5.5 0 0 1 .707 0l3.536 3.535a.5.5 0 0 1 0 .707l-3.536 3.536ZM35.668 16.575a.5.5 0 0 1-.708 0l-3.535-3.535a.5.5 0 0 1 0-.707l3.535-3.536a.5.5 0 0 1 .708 0l3.535 3.536a.5.5 0 0 1 0 .707l-3.535 3.535Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
      </svg></li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\"> - 20 - </li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-send\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m14 24-7-5V7l34 17L7 41V29l7-5Zm0 0h25\\" stroke-miterlimit=\\"3.864\\"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>"
`;

exports[`<pagination> demo: render [ellipsis] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\">
  <!---->
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"20\\">1</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">2</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">3</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">4</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">5</li>
    <li class=\\"arco-pagination-item arco-pagination-item-ellipsis\\" disabled=\\"false\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-more\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        <path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\"></path>
      </svg></li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">20</li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>"
`;

exports[`<pagination> demo: render [jumper] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\">
  <!---->
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"5\\">1</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">2</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">3</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">4</li>
    <li class=\\"arco-pagination-item\\" pages=\\"5\\">5</li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
  </ul>
  <!----><span class=\\"arco-pagination-jumper\\"><span class=\\"arco-pagination-jumper-prepend arco-pagination-jumper-text-goto\\">前往</span><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium arco-pagination-jumper-input\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"5\\" aria-valuemin=\\"1\\" aria-valuenow=\\"\\" class=\\"arco-input arco-input-size-medium\\" type=\\"text\\"><!----><!----></span>
  <!--v-if-->
  <!--v-if--></span>
</div>"
`;

exports[`<pagination> demo: render [page-size] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\">
  <!---->
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"20\\">1</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">2</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">3</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">4</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">5</li>
    <li class=\\"arco-pagination-item arco-pagination-item-ellipsis\\" disabled=\\"false\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-more\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        <path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\"></path>
      </svg></li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">20</li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
  </ul><span class=\\"arco-pagination-options\\"><span class=\\"arco-select-view-single arco-select arco-select-view arco-select-view-size-medium\\" title=\\"10 条/页\\"><!----><input class=\\"arco-select-view-input arco-select-view-input-hidden\\" readonly=\\"\\"><span class=\\"arco-select-view-value\\">10 条/页</span><span class=\\"arco-select-view-suffix\\"><!----><span class=\\"arco-select-view-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down arco-select-view-arrow-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
  <!----></span></span>
  <!----></span>
  <!---->
</div>"
`;

exports[`<pagination> demo: render [simple] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium arco-pagination-simple\\">
  <!----><span class=\\"arco-pagination-simple\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span><span class=\\"arco-pagination-jumper arco-pagination-jumper-simple\\"><!--v-if--><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium arco-pagination-jumper-input\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"20\\" aria-valuemin=\\"1\\" aria-valuenow=\\"1\\" class=\\"arco-input arco-input-size-medium\\" type=\\"text\\"><!----><!----></span>
  <!--v-if--><span class=\\"arco-pagination-jumper-separator\\">/</span><span class=\\"arco-pagination-jumper-total-page\\">20</span></span><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span></span>
  <!---->
  <!---->
</div>"
`;

exports[`<pagination> demo: render [size] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\"><span class=\\"arco-radio-group-button arco-radio-group-size-undefined arco-radio-group-direction-horizontal\\"><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"mini\\"><span class=\\"arco-radio-button-content\\">Mini</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"small\\"><span class=\\"arco-radio-button-content\\">Small</span></label><label class=\\"arco-radio-button arco-radio-checked\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"medium\\"><span class=\\"arco-radio-button-content\\">Medium</span></label><label class=\\"arco-radio-button\\"><input type=\\"radio\\" class=\\"arco-radio-target\\" value=\\"large\\"><span class=\\"arco-radio-button-content\\">Large</span></label></span></div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-pagination arco-pagination-size-medium\\"><span class=\\"arco-pagination-total\\">共 50 条</span>
      <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
        <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"5\\">1</li>
        <li class=\\"arco-pagination-item\\" pages=\\"5\\">2</li>
        <li class=\\"arco-pagination-item\\" pages=\\"5\\">3</li>
        <li class=\\"arco-pagination-item\\" pages=\\"5\\">4</li>
        <li class=\\"arco-pagination-item\\" pages=\\"5\\">5</li>
        <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
      </ul><span class=\\"arco-pagination-options\\"><span class=\\"arco-select-view-single arco-select arco-select-view arco-select-view-size-medium\\" title=\\"10 条/页\\"><!----><input class=\\"arco-select-view-input arco-select-view-input-hidden\\" readonly=\\"\\"><span class=\\"arco-select-view-value\\">10 条/页</span><span class=\\"arco-select-view-suffix\\"><!----><span class=\\"arco-select-view-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down arco-select-view-arrow-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></span>
      <!----></span></span>
      <!----></span><span class=\\"arco-pagination-jumper\\"><span class=\\"arco-pagination-jumper-prepend arco-pagination-jumper-text-goto\\">前往</span><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium arco-pagination-jumper-input\\"><!----><input role=\\"spinbutton\\" aria-valuemax=\\"5\\" aria-valuemin=\\"1\\" aria-valuenow=\\"\\" class=\\"arco-input arco-input-size-medium\\" type=\\"text\\"><!----><!----></span>
      <!--v-if-->
      <!--v-if--></span>
    </div>
  </div>
</div>"
`;

exports[`<pagination> demo: render [total] correctly 1`] = `
"<div class=\\"arco-pagination arco-pagination-size-medium\\"><span class=\\"arco-pagination-total\\">共 200 条</span>
  <ul class=\\"arco-pagination-list\\"><span class=\\"arco-pagination-item arco-pagination-item-previous arco-pagination-item-disabled\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-left\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M32 8.4 16.444 23.956 32 39.513\\"></path></svg></span>
    <li class=\\"arco-pagination-item arco-pagination-item-active\\" pages=\\"20\\">1</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">2</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">3</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">4</li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">5</li>
    <li class=\\"arco-pagination-item arco-pagination-item-ellipsis\\" disabled=\\"false\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-more\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
        <path d=\\"M38 25v-2h2v2h-2ZM23 25v-2h2v2h-2ZM8 25v-2h2v2H8Z\\"></path>
      </svg></li>
    <li class=\\"arco-pagination-item\\" pages=\\"20\\">20</li>
    <!----><span class=\\"arco-pagination-item arco-pagination-item-next\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-right\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"m16 39.513 15.556-15.557L16 8.4\\"></path></svg></span>
  </ul>
  <!---->
  <!---->
</div>"
`;
